# contracts

./: .gitignore  Cargo.toml  Makefile  README.md
contracts/liquidity-pool/: Cargo.toml
contracts/liquidity-pool/src/: contract.rs  error.rs  interface.rs  lib.rs  test.rs
contracts/liquidity-pool/src/math/: arithmetic.rs  base.rs  fixed_math.rs  lp_exit.rs  mod.rs  proptests.rs  stable.rs
contracts/liquidity-pool/src/pool/: amp.rs  fee.rs  mod.rs  normalized.rs  quote.rs  scaling.rs  state.rs
contracts/liquidity-pool/test_snapshots/test/: admin_requires_owner_auth.1.json  amp_ramp_down_after_up.1.json  amp_ramp_interpolates_over_time.1.json  deposit_over_lp_max_supply_reverts.1.json  deposit_over_token_cap_reverts.1.json  deposit_rejects_fee_on_transfer_token.1.json  deposit_then_full_withdraw_is_exact_roundtrip.1.json  direct_lp_burn_from_reverts.1.json  first_deposit_must_be_balanced_reverts.1.json  lp_token_transfer_and_approve.1.json  no_protocol_fee_when_zero.1.json  ownership_two_step_transfer.1.json  partial_withdraw_is_proportional.1.json  paused_deposit_reverts.1.json  renounce_ownership_clears_owner.1.json  set_beneficiary_redirects_fee.1.json  set_swap_fee_changes_output.1.json  single_sided_deposit_mints_lp.1.json  swap_exact_in_below_min_out_reverts.1.json  swap_exact_in_works.1.json  swap_exact_out_works.1.json  swap_rejects_fee_on_transfer_input.1.json  swap_routes_protocol_fee_to_beneficiary.1.json  two_balanced_deposits_accumulate_then_full_withdraw.1.json  unpause_restores_ops.1.json  withdraw_after_swap_keeps_reserves_matched_to_balances.1.json  (+6 more)
(+15 files in other folders)
