[workspace]
resolver = "2"
members = [
  "contracts/*",
]

[workspace.dependencies]
soroban-sdk = "26"
proptest = "1"

# OpenZeppelin Stellar (Soroban) contracts. The 0.7.x line is only internally
# consistent at 0.7.2 (its votes extension pulls stellar-governance, published
# only at 0.7.2), which requires soroban-sdk 26. See memory: oz-stellar-contracts.
stellar-tokens = "=0.7.2"
stellar-access = "=0.7.2"
stellar-contract-utils = "=0.7.2"
stellar-macros = "=0.7.2"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

# For more information about this profile see https://soroban.stellar.org/docs/basic-tutorials/logging#cargotoml-profile
[profile.release-with-logs]
inherits = "release"
debug-assertions = true
